--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
+  height: 100vh;
+  color: #f2f2f2;
+  background-color: #383838;
 }
 
 code {
