--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+span {
+  font-size: 1rem;
+}
